# train_reward_yourself

./: .gitignore  DEMO.md  README.md  conda_environment.yaml  pyproject.toml  visualize_lunarlander_demos.py  visualize_lunarlander_rerun.py
example/: eval_robosuite_rl.py  train_robosuite_rl.py
scripts/: dataset_states_to_obs.py  eval_lunar_lander.sh  ppo_step_exp_lunar_lander.sh  pretrain_exp.sh  pretrain_lunar_lander.sh  reward_exp.sh  train_lunar_lander.sh
test/: add_normalization_example.py  check_demo_obs.py  check_gym_wrapper_keys.py  check_object_reconstruction.py  check_obs_space.py  check_pandapush_obs.py  test_dataset.py  test_demo_loading.py  test_normalization.py  test_robosuite_controller.py  verify_object_dims.py  verify_reconstruction.py  visualize_action_distribution.py
train_reward_yourself/: __init__.py  collect_demonstrations.py  env_utils.py  eval_bc_agent.py  eval_rl_agent.py  finetune_bc_with_ppo.py  reward_wrapper.py  run.sh  test_experty_vs_random.py  train_bc_agent.py  train_rl_agent.py  train_rl_with_custom_rm.py  train_rm_from_demos.py  train_vip_critic.py  utils.py  vip_reward_wrapper.py
train_reward_yourself/example/: __init__.py  eval_robosuite_rl.py  train_robosuite_rl.py
