[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "train-reward-yourself"
version = "0.1.0"
description = "Reward learning and RL training framework for robotic manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "numpy>=1.26.4",
    "stable-baselines3[extra]",
    "robosuite @ git+https://github.com/mingxi-jia/robosuite.git@main",
    "robomimic @ git+https://github.com/mingxi-jia/robomimic.git@main",
    "robosuite-task-zoo @ git+https://github.com/ARISE-Initiative/robosuite-task-zoo.git",
    "mimicgen @ git+https://github.com/NVlabs/mimicgen.git",
    "gymnasium[box2d]",
    "tensorboard",
    "swig>=4.4.0",
    "imitation",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["train_reward_yourself*"]
exclude = ["test*", "examples*"]
